; ModuleID = '/home/carl/AnghaBench/radare2/libr/main/extr_rabin2.c___sdb_prompt.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/main/extr_rabin2.c___sdb_prompt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @__sdb_prompt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__sdb_prompt(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  br label %4

4:                                                ; preds = %7, %1
  %5 = call i8* (...) @stdin_gets()
  store i8* %5, i8** %3, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %13

7:                                                ; preds = %4
  %8 = load i32*, i32** %2, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @sdb_query(i32* %8, i8* %9)
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @free(i8* %11)
  br label %4

13:                                               ; preds = %4
  ret void
}

declare dso_local i8* @stdin_gets(...) #1

declare dso_local i32 @sdb_query(i32*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
